fix selection and invisible character color

--- a/styles/syntax-variables.less
+++ b/styles/syntax-variables.less
@@ -3,14 +3,14 @@
 // General colors
 @syntax-text-color:            @gun-powder;
 @syntax-cursor-color:          @java;
-@syntax-selection-color:       @very-light-gray;
+@syntax-selection-color:       @gainsboro;
 @syntax-selection-flash-color: @java;
 @syntax-background-color:      @snow;
 
 // Guide colors
-@syntax-wrap-guide-color:          @white-smoke;
-@syntax-indent-guide-color:        @white-smoke;
-@syntax-invisible-character-color: @white-smoke;
+@syntax-wrap-guide-color:          @gainsboro-2;
+@syntax-indent-guide-color:        @gainsboro-2;
+@syntax-invisible-character-color: @gainsboro-2;
 
 // For find and replace markers
 @syntax-result-marker-color:          @very-light-gray;
